--- a/lang/pl/assignments_intro.txt
+++ b/lang/pl/assignments_intro.txt
@@ -1,8 +1,8 @@
 ====== Approve Assignments ======
 
-Tutaj możesz zdefiniować strony/przestrzenie nazw dla których wtyczka Approve będzie wykorzystywana.
-Dodatkowo możesz określić osoby zatwierdzające poszczególne strony, które będą otrzymywać powiadomienia na
-temat wymaganej akcji zatwierdzenia. Reguły bardziej szczegółowe przysłaniają te bardziej ogólne.
+Tutaj możesz zdefiniować strony/przestrzenie nazw dla których wtyczka Approve będzie wykorzystywana
+oraz określić zatwierdzające je osoby.
+Reguły bardziej szczegółowe przysłaniają te bardziej ogólne.
 
   * Przestrzenie nazw wyłączając podprzestrzenie są przypisywane jako ''<nowiki>namespace:*</nowiki>''.
   * Przestrzenie nazw włączając podprzestrzenie są przypisywane jako ''<nowiki>namespace:**</nowiki>''.
