--- a/lang/en/assignments_intro.txt
+++ b/lang/en/assignments_intro.txt
@@ -6,3 +6,5 @@ More precise rule obscures more general.
   * Namespaces excluding subnamespaces are assigned as ''<nowiki>namespace:*</nowiki>''.
   * Namespaces including subnamespaces are assigned as ''<nowiki>namespace:**</nowiki>''.
   * Pages as usual with their full page ID.
+
+Groups can be assigned as approvers with @ prefix.
